# boltzmann

./: .gitignore  CMakeLists.txt  clean_build.sh  rebuild.sh  test.sh
.cache/clangd/index/: main.cpp.FEF78567688FF004.idx  matrix.hpp.6203573EE7B61BC4.idx  test_codec.cpp.02CB06A2C5F56C96.idx
benchmark/: CMakeLists.txt  bench.cpp
src/: CMakeLists.txt  main.cpp  test_codec.cpp
src/matrix/: matrix.cpp  matrix.hpp  matrixslice.hpp
test/: CMakeLists.txt  matrix_test.cpp
